tests/ui/server_send/error/item-is-not-a-function.rs
use http_tracing_attributes::server_send;

#[server_send(trace, "Some")]
struct S;

fn main() {}
